cloudformation/aws-study2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: VPC + EC2 + ALB + RDS (2AZ) WAFv2 with AWS Managed Core Rule Set and CloudWatch Logs

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName

  MyIpAddress:
    Type: String
    Description: Your IP Address (example:1.2.3.4/32)

  DBUsername:
    Type: String
    Default: root

  DBPassword:
    Type: String
    NoEcho: true
    MinLength: 8
    Description: Enter RDS master password (min 8 chars)

Resources:
# -----------------
# VPC
# -----------------
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: aws-study-vpc

# -----------------
# Internet Gateway
# -----------------
  MyInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: aws-study-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway

# -----------------
# Public Subnets
# -----------------
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true

# -----------------
# Private Subnets (RDS)
# -----------------
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.11.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: false

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.12.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: false

# -----------------
# Route Table
# -----------------
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: aws-study-routetable
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyInternetGateway

  PublicSubnet1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

# -----------------
# Security Groups
# -----------------
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and ALB traffic
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref MyIpAddress
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0    
      Tags:
        - Key: Name 
          Value: aws-study-ec2-securitygroup

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name 
          Value: aws-study-alb-securitygroup

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow MySQL from EC2
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref EC2SecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0    
      Tags:
        - Key: Name 
          Value: aws-study-rds-securitygroup    

# -----------------
# EC2
# -----------------
  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: ami-088103e734f7e0529
      NetworkInterfaces:
        - DeviceIndex: 0
          SubnetId: !Ref PublicSubnet1 
          GroupSet:
            - !Ref EC2SecurityGroup
          AssociatePublicIpAddress: true
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: aws-study-ec2
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          dnf update -y
          dnf install git -y
          dnf install java-21-amazon-corretto-devel.x86_64 -y
          dnf install https://dev.mysql.com/get/mysql80-community-release-el9-1.noarch.rpm -y
          rpm --import https://repo.mysql.com/RPM-GPG-KEY-mysql-2023
          dnf install mysql mysql-community-client -y
          cd /home/ec2-user
          git clone https://github.com/koujienami/aws-study.git
          cd aws-study
          chmod 755 gradlew
          PROPERTIES_FILE="src/main/resources/application.properties"
          sed -i 's|spring.datasource.url=.*|spring.datasource.url=jdbc:mysql://${MyRDS.Endpoint.Address}:3306/awsstudy|' $PROPERTIES_FILE
          sed -i 's|spring.datasource.username=.*|spring.datasource.username=${DBUsername}|' $PROPERTIES_FILE
          sed -i 's|spring.datasource.password=.*|spring.datasource.password=${DBPassword}|' $PROPERTIES_FILE
          sleep 30
          mysql -h ${MyRDS.Endpoint.Address} -u ${DBUsername} -p'${DBPassword}' <<EOF
          CREATE DATABASE IF NOT EXISTS awsstudy;
          USE awsstudy;
          CREATE TABLE IF NOT EXISTS student (
          id INT PRIMARY KEY AUTO_INCREMENT,
          name VARCHAR(255) NOT NULL
          );
          INSERT INTO student (name) VALUES ('Kouji Enami');
          EOF
          ./gradlew bootRun > /var/log/app.log 2>&1 &

# -----------------
# ALB
# -----------------
  MyALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: aws-study-alb
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Scheme: internet-facing
      Type: application
      Tags:
        - Key: Name
          Value: aws-study-alb

  MyTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: aws-study-alb-targetgroup
      VpcId: !Ref MyVPC
      Port: 8080
      Protocol: HTTP
      TargetType: instance
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      HealthCheckProtocol: HTTP
      HealthCheckPath: /
      HealthCheckPort: "traffic-port"
      HealthCheckIntervalSeconds: 10
      Matcher:
        HttpCode: 200
      Tags:
        - Key: Name
          Value: aws-study-alb-targetgroup
      Targets:
        - Id: !Ref MyEC2Instance
          Port: 8080    

  MyListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref MyALB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref MyTargetGroup

# -----------------
# RDS
# -----------------
  MyDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  MyRDS:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      DBName: awsstudy
      Engine: mysql
      DBInstanceClass: db.t3.micro
      Port: 3306
      AllocatedStorage: 20
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      VPCSecurityGroups:
        - !Ref RDSSecurityGroup
      DBSubnetGroupName: !Ref MyDBSubnetGroup
      PubliclyAccessible: false
      BackupRetentionPeriod: 1
      Tags:
        - Key: Name
          Value: aws-study-rds

# -----------------------------
# CloudWatch Log Group
# -----------------------------
  WAFLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: aws-waf-logs-sample-webacl
      RetentionInDays: 14
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete     

# -----------------------------
# WAF Web ACL
# -----------------------------
  WebACL:
    Type: AWS::WAFv2::WebACL
    Properties:
      Name: SampleWebACL
      Scope: REGIONAL
      DefaultAction:
        Allow: {}
      VisibilityConfig:
        SampledRequestsEnabled: true
        CloudWatchMetricsEnabled: true
        MetricName: SampleWebACLMetric

      Rules:

        - Name: AWSManagedRulesCommonRuleSet
          Priority: 1

          OverrideAction:
            None: {}

          Statement:
            ManagedRuleGroupStatement:
              VendorName: AWS
              Name: AWSManagedRulesCommonRuleSet

          VisibilityConfig:
            SampledRequestsEnabled: true
            CloudWatchMetricsEnabled: true
            MetricName: CommonRuleSetMetric

# -----------------------------
# WAF と ALB を関連付け
# -----------------------------
  WebACLAssociation:
    Type: AWS::WAFv2::WebACLAssociation
    Properties:
      ResourceArn: !GetAtt MyALB.LoadBalancerArn
      WebACLArn: !GetAtt WebACL.Arn

# -----------------------------
# WAF Logging 設定
# -----------------------------
  WAFLogPolicy:
    Type: AWS::Logs::ResourcePolicy
    Properties:
      PolicyName: WAFLogsPolicy
      PolicyDocument: !Sub |
        {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": "delivery.logs.amazonaws.com"
              },
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Resource": "${WAFLogGroup.Arn}:*"
            }
          ]
        }

  WAFLogging:
    Type: AWS::WAFv2::LoggingConfiguration
    DependsOn: WAFLogPolicy
    Properties:
      ResourceArn: !GetAtt WebACL.Arn
      LogDestinationConfigs:
        - !GetAtt WAFLogGroup.Arn

# ------------------------------
# CloudWatch アラーム設定
# ------------------------------
  CPUUtilizationAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: EC2-High-CPU-Alarm
      AlarmDescription: Alarm when EC2 CPU exceeds 80%
      Namespace: AWS/EC2
      MetricName: CPUUtilization
      Dimensions:
        - Name: InstanceId
          Value: !Ref MyEC2Instance
      Statistic: Average
      Period: 300
      EvaluationPeriods: 2
      Threshold: 80
      ComparisonOperator: GreaterThanThreshold
      TreatMissingData: missing
      Unit: Percent
      ActionsEnabled: true
      AlarmActions:
        - arn:aws:sns:ap-northeast-1:135808944987:AWS-Study-Topic

# --------------------------------
# CloudWatchにダッシュボードを表示
# --------------------------------
  CloudWatchDashboard:
    Type: AWS::CloudWatch::Dashboard
    Properties:
      DashboardName: aws-study-dashboard
      DashboardBody: !Sub |
        {
          "widgets": [

            {
              "type": "metric",
              "x": 0,
              "y": 0,
              "width": 12,
              "height": 6,
              "properties": {
                "metrics": [
                  ["AWS/EC2","CPUUtilization","InstanceId","${MyEC2Instance}"]
                ],
                "stat": "Average",
                "period": 300,
                "region": "ap-northeast-1",
                "title": "EC2 CPU Utilization"
              }
            },

            {
              "type": "metric",
              "x": 12,
              "y": 0,
              "width": 12,
              "height": 6,
              "properties": {
                "metrics": [
                  ["AWS/WAFV2","BlockedRequests","WebACL","SampleWebACL","Rule","ALL","Region","ap-northeast-1"]
                ],
                "stat": "Sum",
                "period": 300,
                "region": "ap-northeast-1",
                "title": "WAF Blocked Requests"
              }
            },

            {
              "type": "log",
              "x": 0,
              "y": 6,
              "width": 24,
              "height": 6,
              "properties": {
                "logGroupNames": [
                "aws-waf-logs-sample-webacl"
                ],
                "queryString": "fields @timestamp, action, httpRequest.clientIp, httpRequest.uri | sort @timestamp desc | limit 20",
                "region": "ap-northeast-1",
                "title": "WAF Logs"
                "view": "table"
              }
            }

          ]
        }
